--- a/package.json
+++ b/package.json
@@ -4,27 +4,42 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon dist/app.js"
+    "prestart": "tsc",
+    "prebuild": "rimraf dist/*",
+    "start": "node dist/app.js",
+    "start:dev": "nodemon dist/app.js",
+    "dev": "nodemon src/app.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "celebrate": "^15.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.3",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.19.0",
     "sequelize-typescript": "^2.1.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.26",
     "@types/sequelize": "^4.28.12",
     "eslint": "^8.14.0",
     "nodemon": "^2.0.15",
-    "sequelize-cli": "^6.4.1"
+    "rimraf": "^3.0.2",
+    "sequelize-cli": "^6.4.1",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
   }
 }
