--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mailgun-js": "^0.22.0",
     "moment": "^2.29.3",
+    "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.19.0",
@@ -33,7 +35,9 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/mailgun-js": "^0.22.12",
     "@types/node": "^17.0.26",
+    "@types/nodemailer": "^6.4.4",
     "@types/sequelize": "^4.28.12",
     "eslint": "^8.14.0",
     "nodemon": "^2.0.15",
