--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.21",
     "mailgun-js": "^0.22.0",
     "moment": "^2.29.3",
+    "multer": "^1.4.4",
     "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
@@ -36,6 +37,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mailgun-js": "^0.22.12",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.26",
     "@types/nodemailer": "^6.4.4",
     "@types/sequelize": "^4.28.12",
